Fix compile error
nothing is ever that easy

Signed-off-by: unilock <unilock@fennet.rentals>